testing/tests/ui/loop_cycle_wrong_argument_count.stderr
error: loop.cycle(…) cannot use an empty array
 --> ForCycle.txt:1:28
       ".cycle(\"r\", \"g\", \"b\") }}{{ v }},{% endfor %}"
 --> tests/ui/loop_cycle_wrong_argument_count.rs:5:5
  |
5 |     source = r#"{% for v in values %}{{ loop.cycle("r", "g", "b") }}{{ v }},{% endfor %}"#,
  |     ^^^^^^
